UpdateConfig proper jvm args default; Replace some html entities in rss